@@ -85,6 +85,7 @@
 %__tar			@__TAR@
 %__tclsh		@__TCLSH@
 %__unzip		@__UNZIP@
+%__vcheck		%{__rpmhome}/vcheck
 %__wget			@__WGET@
 %__xar			@__XAR@
 
