@@ -1,4 +1,5 @@
 5.0a4 -> 5.0b1:
+    - jbj: pop RPMTAG_TRACK work-in-progress into CVS. push "segfault on HEAD".
     - jbj: stub in Requires: sanitycheck(N) probe. needs to run the script, duh.
     - jbj: drill sanitycheck exec into psmStage() like %verifyscript.
     - jbj: --rebuilddb has too many NOKEY's using rpmnss. use rpmbc in beta1.
